fixed iPhone spacing

--- a/style.css
+++ b/style.css
@@ -107,6 +107,6 @@ ul {
 
 .iphone {
     text-align: center;
-    margin: 20px, auto, 0;
+    margin: 50px auto 0;
     font-size: 1.5rem;
 }
